vis/src/components/Cluster.css
.name-freq {
  /* background-color: aliceblue; */
  background-color: var(--clr-card-badge-bg);
  color: var(--clr-card-badge-fg);
  font-weight: 800;
  padding: 4px 12px;
  margin: 4px 8px;
  border-radius: 6px;
  display: inline-block;
}

.mono {
  font-family: 'Courier New', Courier, monospace;
}

.cluster {
  display: grid;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  padding: 2rem;
  border-radius: 8px;
  background-color: var(--clr-card-bg);
  gap: 2rem;
  grid-template:
    "title title"
    "properties files"
    "properties files"
    "names files"
  ;
  grid-template-columns: 1fr 2fr;
}

.cluster h3 {
  color: var(--clr-card-title-fg);
}

.names {
  grid-area: names;
  max-height: 200px;
  overflow-y: scroll;
}

.title {
  grid-area: title;
  display: grid;
  flex-direction: row;
  column-gap: 2rem;
  grid-template:
    "icon title"
    "icon also"
  ;
  place-content: start;
  place-items: baseline;
  /* color: rgb(63, 130, 63); */
}

.title h2 {
  grid-area: title;
  display: flex;
  line-height: 2;
  align-self: center;
}

.title>span {
  grid-area: icon;
  font-size: 2rem;
  font-weight: 800;
  color:rgb(214, 214, 214);
}

.title>div {
  grid-area: also;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.properties {
  grid-area: properties;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.pre {
  font-weight: 600;
  line-height: 2;
  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
}

.properties .pre {
  /* background-color: #f0fafa; */
  /* background-image: linear-gradient(to left bottom, #f0fafa, #ecf9f9, #e9f7f7, #e5f6f6, #e1f4f4); */
  background-color: var(--clr-code-bg);
  color: var(--clr-code-fg);
  padding: 0.5rem 1rem;
}

.property.key {
  color: var(--clr-code-key)
}

.property.value {
  color: var(--clr-code-value);
}

.files {
  grid-area: files;
  max-height: 400px;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.files pre {
  display: flex;
  flex-direction: column;
}

.file {
  cursor: pointer;
}

.file:hover {
  background-color: rgb(0, 0, 0, 0.1);
}

